fix link in ai-class post

--- a/_posts/2012-02-20-ai-class.md
+++ b/_posts/2012-02-20-ai-class.md
@@ -43,12 +43,13 @@ Paper and handwriting style made us feel more friendly, but sometime inconvenien
 
 <strong></strong>We use a subreddit and aiqus.com to discuss. People in class are so passionate in helping others. The people there are brilliant and friendly. Many of them are very good at Maths and Probability, that helps me a lot when learning. They challenge every assumption in each quiz and exams, bring a deep explanation, and sometimes, point out mistakes of professors.
 
-Having a huge number of classmate is so cool. Besides giving excellent discussions, many shared their own notes about class. It's <a href="http://larvecode.tumblr.com/post/11396980511" target="_blank">terrific</a> and <a href="http://www.reddit.com/r/aiclass/comments/nfqso/my_evernotes_from_the_class/" target="_blank">inspired</a>. To help others scan or search through all video content, a guy build scripts to put all <a href="wonderwhy-er.com/ai-class/" target="_blank">video lectures side by side with captions</a>. His work is also great help for non-English speaker students. Another guy build script to help people bulk download lectures from YouTube.
+Having a huge number of classmate is so cool. Besides giving excellent discussions, many shared their own notes about class. It's <a href="http://larvecode.tumblr.com/post/11396980511" target="_blank">terrific</a> and <a href="http://www.reddit.com/r/aiclass/comments/nfqso/my_evernotes_from_the_class/" target="_blank">inspired</a>. To help others scan or search through all video content, a guy build scripts to put all <a href="http://wonderwhy-er.com/ai-class/" target="_blank">video lectures side by side with captions</a>. His work is also great help for non-English speaker students. Another guy build script to help people bulk download lectures from YouTube.
 <h2>Experience joyful moments</h2>
 It's not only the knowledge, the class also bring many amusing moments.
 The most joyful moment is when watching Sebastian telling his <strong>story about the auto-driving cars</strong>. Many of students watch this lecture again and again, feel inspired!
-http://www.youtube.com/watch?v=V_BJUBpuvFE
-<a href="http://www.youtube.com/watch?v=kqDvbguZsAA" target="_blank">Continue watch Autonomous Vehicles Introduction part 2</a>
+
+[Autonomous Vehicles Introduction](http://www.youtube.com/watch?v=V_BJUBpuvFE)
+[Part 2](http://www.youtube.com/watch?v=kqDvbguZsAA)
 
 - The website <strong>ai-class.com was down</strong> few hours before almost every homework assignment's deadline. As a result, almost all homework assignment's deadlines were extended one more day. This is caused by a huge number of students wait until deadline to learn material and do their homework. Sometimes, people double that there had DDOS attack to cheat on homework's deadline!
 
