--- a/_posts/2013-05-11-milo-kong.md
+++ b/_posts/2013-05-11-milo-kong.md
@@ -7,17 +7,19 @@ tag: startup,
 
 This week is a crazy week for me. It's also very exciting.
 
-This week, my friend and me started Milo Kong. If you haven't visited Milo Kong Facebook Page yet, then this is a short description: I started to sell drinks for startups working at my working building. I take some of the money for my service to deliver drinks to customer's office.
+This week, my friends and me started Milo Kong. If you haven't visited Milo Kong Facebook Page yet, then this is a short description: I started to sell drinks for startups at my working building: 195 Pearl's Hill Terrace. I get money for my service to deliver drinks to customer's office.
 
-![](/images/2013/milo-kong-fb-screenshot.png)
+<a href="https://www.facebook.com/milokong195/photos_stream">![](/images/2013/milo-kong-fb-screenshot.png)</a>
 
 
 What is crazy about this? Wow, I do something very opposited with what I'm doing. It's not programming. It's not a scalable business. It's not big. It's not long term. It's not new.
 
 I don't know where it is going to. I just do it because it's crazy, and I want to try (and thanks my friends at Intraix to keep pushing me!)
 
+Above all, it turned out to be very very funny. Yeah, we love it!
+
 <iframe width="480" height="360" src="http://www.youtube-nocookie.com/embed/Gsl2R1AQqPc" frameborder="0" allowfullscreen="yes"></iframe>
 
-It turned out to be super super funny. And I learn something from it too. I learn how it feels when you take money from customer. I learn how to charge for my work. How my 6 months hard-working in programming, haven't give me any cent yet, while a few minutes of  service, can give me a real dollar.
+And I also learn. I learn how it feels when you take money from customers. I learn how to charge for my work. How my 6 months hard-working in programming, haven't give me any cent yet, while a few minutes of  service, can give me a real dollar.
 
 I learn that I think so much. Sometime, thing can be crazy. Just try.
