--- a/_posts/2013-06-22-done-app.md
+++ b/_posts/2013-06-22-done-app.md
@@ -6,3 +6,6 @@ DoneApp is my simple app to help people build new habits. I build it just to sim
 
   
 I love small app, that I only do 1 thing, and do it really really well.
+
+  
+This is cool
