add podcast story

--- a/_posts/2013-06-25-go-kl.md
+++ b/_posts/2013-06-25-go-kl.md
@@ -4,7 +4,7 @@ title: Going from Singapore to Kuala Lumpur
 
 ---
 
-This post just note about how I did my trip to Kuala Lumpur - Malaysia recently.
+This post shares about how I did my trip to Kuala Lumpur - Malaysia recently. I was a bit worry when starting the trip, so this post include some small lessons I learned.
 
 I choose to go by bus, so I booked the ticket online via www.busonlineticket.com. The ticket price is 30SGD. Not cheap. I know that If I go into Malaysia first, then take a domestic bus to KL, it should be cheaper. But I choose make it easy for a start.
 
@@ -30,6 +30,8 @@ Second stop for migration into Malaysia. As Singapore, Malaysia also has a rule 
 
 ![](/images/2013/kl/IMG_3382.JPG)
 ![](/images/2013/kl/IMG_3383.JPG)
+
+It's always long in bus, so I prepared by downloading some podcasts from 5by5, which I got introduced from my friend, Bryan. The latest episode is done with a tech rockstart @dhh. The long journey becomes very very enjoyable with this podcast.
 
 Comming to KL, take this photo, so I can have the phone number of the police here.
 
