have some grammar

--- a/_posts/2013-06-25-go-kl.md
+++ b/_posts/2013-06-25-go-kl.md
@@ -4,11 +4,11 @@ title: Going from Singapore to Kuala Lumpur
 
 ---
 
-This post shares about how I did my trip to Kuala Lumpur - Malaysia recently. I was a bit worry when starting the trip, so this post include some small lessons I learned.
+This post shares about how I did my trip to Kuala Lumpur - Malaysia today. I was a bit worry when starting the trip, so this post include some small lessons I learned.
 
 I choose to go by bus, so I booked the ticket online via www.busonlineticket.com. The ticket price is 30SGD. Not cheap. I know that If I go into Malaysia first, then take a domestic bus to KL, it should be cheaper. But I choose make it easy for a start.
 
-There has 2 departure places, but I choose to go to CityPlaza, for easier to go by MRT. However after in bus, they still drive me to the other place. So, it seems better to come here.
+There has 2 departure places, and I choose to go to CityPlaza, for easier to go by MRT. However after in bus, they still drive me to the other place. So, it seems better to come here.
 ![](/images/2013/kl/IMG_3374.PNG)
 
 Tourist are waiting for the bus
@@ -47,6 +47,7 @@ Walk to my hostel Step Inn Guest House. I found it in Trip Advisor, it has cheap
 ![](/images/2013/kl/IMG_3388.JPG)
 
 Unfortunately, the dorm room is out of rental, so I try the Single Room, which has double expense 35 RM. Not bad, a bit hot, there has a ceiling fan. 
+
 ![](/images/2013/kl/IMG_3391.JPG)
 
 
