--- a/_posts/2013-06-25-go-kl.md
+++ b/_posts/2013-06-25-go-kl.md
@@ -73,3 +73,18 @@ Okie, get the maps. Go around.
 ![](/images/2013/kl/IMG_3417.JPG)
 ![](/images/2013/kl/IMG_3418.JPG)
 ![](/images/2013/kl/IMG_3420.JPG)
+
+A short video in Jalan Alor.
+
+<video controls="controls" width="640" height="640">
+  <source src="http://distilleryvesper3-11.ak.instagram.com/8fb1f79add9c11e2aa2d22000a1f9a45_101.mp4" type="video/mp4" />
+  <source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.webm" type="video/webm" />
+  <source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.ogv" type="video/ogg" />
+  <object type="application/x-shockwave-flash" data="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf" width="640" height="640">
+    <param name="movie" value="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf" />
+    <param name="allowFullScreen" value="true" />
+    <param name="wmode" value="transparent" />
+    <param name="flashVars" value="config={'playlist':[{'url':'http%3A%2F%2Fdistilleryvesper3-11.ak.instagram.com%2F8fb1f79add9c11e2aa2d22000a1f9a45_101.mp4','autoPlay':false}]}" />
+    <span title="No video playback capabilities, please download the video below"></span>
+  </object>
+</video>
