--- a/_posts/2013-06-25-go-kl.md
+++ b/_posts/2013-06-25-go-kl.md
@@ -15,13 +15,18 @@ Tourist are waiting for the bus
 
 ![](/images/2013/kl/IMG_3373.JPG)
 
-First stop for visa check out of Singapore. When I fly into Singapore, there has a Embarkation White Card, which I fill in after visiting Singapore, I will go back to Ho Chi Minh City. I have a bit worry if anything's wrong if I'm not go back HCMC, but go to Malaysia. But everything seems to be very okay.
+
+First stop for visa check out of Singapore.
 
 ![](/images/2013/kl/IMG_3376.PNG)
 
-After this bridge is Malaysia.
+ When I fly into Singapore, there has a Embarkation White Card, which I declared: after visiting Singapore, I will go back to Ho Chi Minh City. I have a bit worry if anything's wrong if I'm not go back HCMC, but go to Malaysia. But everything seems to be very okay.
+
 
 ![](/images/2013/kl/IMG_3377.JPG)
+
+After this bridge is Malaysia.
+
 ![](/images/2013/kl/IMG_3379.JPG)
 
 Second stop for migration into Malaysia. As Singapore, Malaysia also has a rule that you need to have a 2-round tickets for imigration. Just to prove that you will not stay here after visiting visa expired. I was worry about this too. I thought I need to buy ticket. But everything seems to be okay with only 1 way ticket.
